tests/fixtures/invalid/pow_list_set_none.py
# Cannot call pow() with List[int], Set[int], None
x = pow([1, 2, 3], {1, 2, 3}, None)
